--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
 <hr/>
 <p>
   <font size="4">
-    I am currently an undergraduate student at Dalian Maritime University, with research interests in object detection under challenging visual scenarios. 
-    My recent work focuses on camouflaged and salient objects, which are often seamlessly embedded in their surroundings or easily confused with complex backgrounds, making accurate detection particularly challenging. 
-    Detecting such objects plays a critical role in reliable scene understanding and benefits a wide range of computer vision applications, such as potential applications in image classification, visual tracking, content-aware image editing, medical image analysis, and robotic navigation. 
-    In addition, I explore multimodal fusion techniques that leverage complementary information from different modalities to improve robustness and generalization in complex scenes.
-    <br>
+    I am currently an undergraduate student at Dalian Maritime University, majoring in Computer Science and Technology. 
   </font>
 </p>
 
@@ -77,9 +73,16 @@
 <hr/>
 <p>
   <font size="4">
-    My research interests include:
+    
+    My primary research interests lie in object detection under challenging visual scenarios. 
+    My recent work focuses on camouflaged and salient object detection, where targets are often seamlessly embedded in their surroundings or easily confused with complex backgrounds, making accurate detection particularly challenging. 
+    Detecting such objects plays a critical role in reliable scene understanding and benefits a wide range of computer vision applications, including image classification, visual tracking, content-aware image editing, medical image analysis, and robotic navigation. 
+    In addition, I explore multimodal fusion techniques that leverage complementary information from different modalities to improve robustness and generalization in complex scenes. 
+    More recently, I have begun exploring vision language and visual multimodal large models to further enhance representation learning and cross-modal understanding.
+    
     <ul>
       <li>camouflaged objects detection and salient objects detection</li>
+      <li>Visual multi-modal large model</li>
     </ul>
   </font>
 </p>
