--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <p><font size="+1">
         Email: <a href="mailto:King.Whao@outlook.com"><i>King.Whao@outlook.com</i></a><br>
-        GitHub: <a href="https://github.com/KingWhao" target="_blank">github.com/KingWhao</a><br>
+        GitHub: <a href="https://github.com/KingWhao" target="_blank">github.com/hao-wang1216</a><br>
         <!-- Google Scholar: <a href="#" target="_blank">[Link]</a> -->
       </font></p>
     </td>
