--- a/index.html
+++ b/index.html
@@ -90,6 +90,52 @@
     </ul>
   </font>
 </p>
+<!-- ================== Projects ================== -->
+<h2>Projects</h2>
+<hr/>
+
+<div class="project">
+  <b>Camouflaged and Salient Object Detection in Challenging Scenes</b><br>
+  <p>
+    This project focuses on detecting camouflaged and salient objects in complex visual scenes,
+    where targets are often indistinguishable from their surroundings.
+    The goal is to improve detection robustness and scene understanding under severe background clutter.
+  </p>
+  <p>
+    <a href="#">[Paper]</a>
+    <a href="#">[Code]</a>
+  </p>
+</div>
+
+<br>
+
+<div class="project">
+  <b>Multimodal Fusion for Robust Object Detection</b><br>
+  <p>
+    This project explores multimodal fusion techniques that integrate complementary information
+    from different modalities to enhance robustness and generalization in challenging visual scenarios.
+    Applications include complex scene perception and multimodal object detection.
+  </p>
+  <p>
+    <a href="#">[Code]</a>
+  </p>
+</div>
+
+<br>
+
+<div class="project">
+  <b>Vision–Language and Visual Multimodal Large Models</b><br>
+  <p>
+    This ongoing project investigates vision–language and visual multimodal large models
+    for representation learning and cross-modal understanding.
+    The goal is to leverage large-scale multimodal pretraining to support object detection
+    and scene understanding in complex environments.
+  </p>
+  <p>
+    <span style="color:gray;">[Ongoing]</span>
+  </p>
+</div>
+
 
 </body>
 </html>
