--- a/index.html
+++ b/index.html
@@ -92,21 +92,29 @@
 </p>
 <!-- ================== Projects ================== -->
 <h2>Projects</h2>
+<hr/>
+
 <div class="project">
   <table>
     <tr>
-      <td width="280">
-        <img src="projects/cod/teaser.png" width="260">
+      <!-- ===== Image ===== -->
+      <td width="300" valign="top">
+        <img src="UniCOD/Overview.png" width="260">
       </td>
-      <td>
-        <b>Camouflaged and Salient Object Detection in Challenging Scenes</b><br>
-        <p>...</p>
-        <p>[Paper | Code]</p>
+      <!-- ===== Text ===== -->
+      <td valign="top">
+        <b>Multimodal Camouflaged and Salient Object Detection</b><br>
+        <p>
+
+        </p>
+        <p>
+          [<a href="#">Paper</a> |
+           <a href="#">Code</a>]
+        </p>
       </td>
     </tr>
   </table>
 </div>
-
 
 </body>
 </html>
