--- a/index.html
+++ b/index.html
@@ -95,25 +95,21 @@
 <hr/>
 
 <div class="project">
-  <table>
-    <tr>
-      <!-- ===== Image ===== -->
-      <td width="400" valign="top">
-        <img src="UniCOD/Overview.png" width="300">
-      </td>
-      <!-- ===== Text ===== -->
-      <td valign="top">
-        <b>Multimodal Camouflaged and Salient Object Detection</b><br>
-        <p>
-
-        </p>
-        <p>
-          [<a href="#">Paper</a> |
-           <a href="#">Code</a>]
-        </p>
-      </td>
-    </tr>
-  </table>
+  <tr>
+    <td><font size="4"><b>2026</b></font></td>
+  </tr>
+  <tr>
+    <td><font size="4">1.</font></td>
+    <td><center><img width="260" height="135" src="UniCOD/Overview.png"></center></td>
+    <td><font size="4">Toward Unified Cross-Modal Camouflaged Object Detection
+      <br>
+      Hao Wang,
+      <br>
+      <i>-</i>
+      <br>
+      [<b><a href="" target="_blank">PDF</a></b>|<a href="" target="_blank"><b>Code</b></a>]
+    </font></td>
+  </tr>
 </div>
 
 </body>
