--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 <hr/>
 
 <div class="project">
+<table>
+<tbody>
   <tr>
     <td><font size="4"><b>2026</b></font></td>
   </tr>
@@ -110,7 +112,16 @@
       [<b><a href="" target="_blank">PDF</a></b>|<a href="" target="_blank"><b>Code</b></a>]
     </font></td>
   </tr>
+  <tr></tr>
+  <tr></tr>
+
+
+
+
+
 </div>
 
+</tbody>
+</table>
 </body>
 </html>
