--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
   </tr>
   <tr>
     <td><font size="4">1.</font></td>
-    <td><center><img width="260" height="135" src="UniCOD/Overview.png"></center></td>
+    <td><center><img width="350" height="150" src="UniCOD/Overview.png"></center></td>
     <td><font size="4">Toward Unified Cross-Modal Camouflaged Object Detection
+      <br>This work addresses camouflaged object detection by developing a unified multimodal 
+          framework that adapts to varying auxiliary modality availability.
+      <br>Hao Wang,
       <br>
-      Hao Wang,
-      <br>
-      <i>-</i>
+      <i>under review</i>
       <br>
       [<b><a href="" target="_blank">PDF</a></b>|<a href="" target="_blank"><b>Code</b></a>]
     </font></td>
