--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
   <tr>
     <td><font size="4">1.</font></td>
     <td><center><img width="350" height="150" src="UniCOD/Overview.png"></center></td>
-    <td><font size="4">Toward Unified Cross-Modal Camouflaged Object Detection
-      <br>This work addresses camouflaged object detection by developing a unified multimodal 
-          framework that adapts to varying auxiliary modality availability.
+    <td><font size="4"><b>Toward Unified Cross-Modal Camouflaged Object Detection</b>
       <br>Hao Wang,
+      <br><font size="3">This work addresses camouflaged object detection by developing a unified multimodal
+        framework that adapts to varying auxiliary modality availability.</font>
       <br>
       <i>under review</i>
       <br>
